add test wrf_create

--- a/README.html
+++ b/README.html
@@ -128,9 +128,7 @@ $(document).ready(function () {
 <div id="exporting-emissions-to-other-models" class="section level2">
 <h2>Exporting emissions to other models</h2>
 <p>Emissions are mass that affects atmosphere in complex ways, not only physical, but also, in the health of humans, ecosystems, economically, etc.</p>
-<p>There are several models whose inputs are emissions, such as <a href="https://www.cmascenter.org/r-line/">R-Line</a> or <a href="https://ruc.noaa.gov/wrf/wrf-chem/">WRF-Chem</a>. Now experimental addition of inputs for running smoke and cmaq.</p>
-<p>This R-Package provide functions to read emissions from <a href="https://github.com/ibarraespinosa/vein">VEIN</a> and from other models in different formats and export the emissions into the appropiate format suitable to other models.</p>
-<p>The first case of this package will exporting VEIN emissions into the model R-Line.</p>
+<p>There are several models whose inputs are emissions, such as <a href="https://www.cmascenter.org/r-line/">R-Line</a> or <a href="https://ruc.noaa.gov/wrf/wrf-chem/">WRF-Chem</a>. This R-Package provide functions to read emissions from <a href="https://github.com/ibarraespinosa/vein">VEIN</a> and from other models in different formats and export the emissions into the appropiate format suitable to other models.</p>
 </div>
 <div id="install" class="section level2">
 <h2>Install</h2>
